Updated for version 1.1.3d - Fixe TabListHiding